Code and style hero section and navbar

--- a/index.html
+++ b/index.html
@@ -13,19 +13,41 @@
     <!-- Optimizations for mobile devices -->
 
     <!-- Google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
-
 
     <!-- HTML5 shiv and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"</script>
         <![endif]-->
-</head>
-
+</head>    
 <body>
-
+      <section id="hero">
+          <div class="container">
+              <div class="title">
+                <h4>Marek Miłosierny - web developer</h4>
+                <a href="" class="cta-button">learn more</a>
+              </div>
+          </div>
+      </section>
+      <section id="navigation">
+          <div class="container">  
+              <img src="img/logo.png" class="logo" alt="Marek Miłosierny logo">            
+              <nav class="navbar">
+                  <ul class="nav right">
+                      <li><a href="">home</a></li>
+                      <li><a href="">about me</a></li>
+                      <li><a href="">skills</a></li>
+                      <li><a href="">portfolio</a></li>
+                      <li><a href="">resume</a></li>
+                      <li><a href="">contact me</a></li>
+                  </ul>
+              </nav>
+          </div>
+      </section>
+     
 
     <script src="js/main.js"></script>
 </body>
