Add sections about & skills

--- a/index.html
+++ b/index.html
@@ -22,32 +22,63 @@
             <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"</script>
         <![endif]-->
-</head>    
+</head>
+
 <body>
-      <section id="hero">
-          <div class="container">
-              <div class="title">
+    <section id="hero">
+        <div class="container">
+            <div class="title">
                 <h4>Marek Miłosierny - web developer</h4>
-                <a href="" class="cta-button">learn more</a>
-              </div>
-          </div>
-      </section>
-      <section id="navigation">
-          <div class="container">  
-              <img src="img/logo.png" class="logo" alt="Marek Miłosierny logo">            
-              <nav class="navbar">
-                  <ul class="nav right">
-                      <li><a href="">home</a></li>
-                      <li><a href="">about me</a></li>
-                      <li><a href="">skills</a></li>
-                      <li><a href="">portfolio</a></li>
-                      <li><a href="">resume</a></li>
-                      <li><a href="">contact me</a></li>
-                  </ul>
-              </nav>
-          </div>
-      </section>
-     
+                <a href="#about" class="cta-button">dowiedz się więcej</a>
+            </div>
+        </div>
+    </section>
+    <section id="navigation">
+        <div class="container">
+            <img src="img/logo.png" class="logo" alt="Marek Miłosierny logo">
+            <nav class="navbar">
+                <ul class="nav right">
+                    <li><a href="">home</a></li>
+                    <li><a href="">o mnie</a></li>
+                    <li><a href="">umiejętności</a></li>
+                    <li><a href="">portfolio</a></li>
+                    <li><a href="">kontakt</a></li>
+                </ul>
+            </nav>
+        </div>
+    </section>
+    <section id="about">
+        
+        <div class="container">
+            <img src="img/my-foto.jpg" alt="Marek Miłosierny photo" class="my-foto left">
+            <div class="about-me left">
+                <h2>O mnie</h2>
+                <p class="about-para">Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando
+                    cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri.</p>
+                <p class="about-para">Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando
+                    cu est, eam dicam soluta ei.</p>
+            </div>
+        </div>
+    </section>
+    <section id="skills">
+        <div class="container">
+            <div class="skill-dsc col-4-skill left">
+            <h2>umiejętności</h2>
+                <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri. </p>
+                <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri. </p>
+            </div>
+            <div class="skill-bars col-4-skill left">
+                <h3>html/css</h3>    
+                <progress value="50" max="100">20%</progress>
+                <h3>html/css</h3>    
+                <progress value="50" max="100"></progress>
+                <h3>html/css</h3>    
+                <progress value="50" max="100"></progress>
+                <h3>html/css</h3>    
+                <progress value="50" max="100"></progress>
+            </div>
+        </div>
+    </section>
 
     <script src="js/main.js"></script>
 </body>
