Add portfolio section

--- a/index.html
+++ b/index.html
@@ -47,6 +47,22 @@
             </nav>
         </div>
     </section>
+    <section id="hobby">
+        <div class="container">
+            <div class="col-4-hobby">
+                <h2>mocne strony</h2>
+                <p>Lorem ipsum dolor sit amet, ea doming until epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est.</p>
+            </div>
+            <div class="col-4-hobby">
+                <h2>Cele</h2>
+                <p>Lorem ipsum dolor sit amet, ea doming until epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est.</p>
+            </div>
+            <div class="col-4-hobby">
+                <h2>Hobby</h2>
+                <p>Lorem ipsum dolor sit amet, ea doming until epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est.</p>
+            </div>
+        </div>
+    </section>
     <section id="about">
         
         <div class="container">
@@ -75,8 +91,32 @@
                 <h3>html/css</h3>    
                 <progress value="50" max="100"></progress>
                 <h3>html/css</h3>    
-                <progress value="50" max="100"></progress>
+                <progress value="50" max="100" class="responsive"></progress>
             </div>
+        </div>
+    </section>
+    <section id="portfolio">
+        <div class="portfolio-row">
+            <a href="">
+                <div class="proj-img"><img src="img/proj.jpg" alt=""></div>
+            </a>
+            <a href="">
+                <div class="proj-img"><img src="img/proj.jpg" alt=""></div>
+            </a>
+            <a href="">
+                <div class="proj-img"><img src="img/proj.jpg" alt=""></div>
+            </a>
+        </div>
+        <div class="portfolio-row">
+            <a href="">
+                <div class="proj-img"><img src="img/proj.jpg" alt=""></div>
+            </a>
+            <a href="">
+                <div class="proj-img"><img src="img/proj.jpg" alt=""></div>
+            </a>
+            <a href="">
+                <div class="proj-img"><img src="img/proj.jpg" alt=""></div>
+            </a>
         </div>
     </section>
 
