--- a/index.html
+++ b/index.html
@@ -96,26 +96,30 @@
         </div>
     </section>
     <section id="portfolio">
+        <div class="container">
+            <h2>portfolio</h2>
+            <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri</p>
+        </div>
         <div class="portfolio-row">
             <a href="">
-                <div class="proj-img"><img src="img/proj.jpg" alt=""></div>
+                <div class="proj-img img-1"></div>
             </a>
             <a href="">
-                <div class="proj-img"><img src="img/proj.jpg" alt=""></div>
+                <div class="proj-img img-2"></div>
             </a>
             <a href="">
-                <div class="proj-img"><img src="img/proj.jpg" alt=""></div>
+                <div class="proj-img img-3"></div>
             </a>
         </div>
         <div class="portfolio-row">
             <a href="">
-                <div class="proj-img"><img src="img/proj.jpg" alt=""></div>
+                <div class="proj-img img-4"></div>
             </a>
             <a href="">
-                <div class="proj-img"><img src="img/proj.jpg" alt=""></div>
+                <div class="proj-img img-5"></div>
             </a>
             <a href="">
-                <div class="proj-img"><img src="img/proj.jpg" alt=""></div>
+                <div class="proj-img img-6"></div>
             </a>
         </div>
     </section>
