Add sections contact and footer

--- a/index.html
+++ b/index.html
@@ -123,6 +123,16 @@
             </a>
         </div>
     </section>
+    <section id="contact">
+        <div class="container">
+            <h2 class="contact-head">kontakt</h2>
+            <p class="contact-para">Aby się ze mną skontaktować napisz maila na adres marek.milosierny[at]gmail.com</p>
+            <a href="mailto:marek.milosierny@gmail.com" class="cta-button">napisz do mnie</a>
+        </div>
+    </section>
+    <footer>
+        mm 2017
+    </footer>
 
     <script src="js/main.js"></script>
 </body>
