Change logo and footer

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="container">
             <div class="title">
                 <h4>Marek Miłosierny - web developer</h4>
-                <a href="#about" class="cta-button">dowiedz się więcej</a>
+                <a href="#navigation" class="cta-button">dowiedz się więcej</a>
             </div>
         </div>
     </section>
@@ -38,11 +38,11 @@
             <img src="img/logo.png" class="logo" alt="Marek Miłosierny logo">
             <nav class="navbar">
                 <ul class="nav right">
-                    <li><a href="">home</a></li>
-                    <li><a href="">o mnie</a></li>
-                    <li><a href="">umiejętności</a></li>
-                    <li><a href="">portfolio</a></li>
-                    <li><a href="">kontakt</a></li>
+                    <li><a href="#hobby">o mnie</a></li>
+                    <li><a href="#skills">umiejętności</a></li>
+                    <li><a href="#portfolio">portfolio</a></li>
+                    <li><a href="">życiorys</a></li>
+                    <li><a href="#contact">kontakt</a></li>
                 </ul>
             </nav>
         </div>
@@ -131,7 +131,8 @@
         </div>
     </section>
     <footer>
-        mm 2017
+        <img src="img/logo.png" class="logo" alt="Marek Miłosierny logo">
+        <h2>2017</h2>
     </footer>
 
     <script src="js/main.js"></script>
