Change portfolio section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
                     <li><a href="#hobby">o mnie</a></li>
                     <li><a href="#skills">umiejętności</a></li>
                     <li><a href="#portfolio">portfolio</a></li>
-                    <li><a href="">życiorys</a></li>
                     <li><a href="#contact">kontakt</a></li>
                 </ul>
             </nav>
@@ -51,20 +50,23 @@
         <div class="container">
             <div class="col-4-hobby">
                 <h2>mocne strony</h2>
-                <p>Lorem ipsum dolor sit amet, ea doming until epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est.</p>
+                <p>Lorem ipsum dolor sit amet, ea doming until epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando
+                    cu est.</p>
             </div>
             <div class="col-4-hobby">
                 <h2>Cele</h2>
-                <p>Lorem ipsum dolor sit amet, ea doming until epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est.</p>
+                <p>Lorem ipsum dolor sit amet, ea doming until epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando
+                    cu est.</p>
             </div>
             <div class="col-4-hobby">
                 <h2>Hobby</h2>
-                <p>Lorem ipsum dolor sit amet, ea doming until epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est.</p>
+                <p>Lorem ipsum dolor sit amet, ea doming until epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando
+                    cu est.</p>
             </div>
         </div>
     </section>
     <section id="about">
-        
+
         <div class="container">
             <img src="img/my-foto.jpg" alt="Marek Miłosierny photo" class="my-foto left">
             <div class="about-me left">
@@ -79,18 +81,20 @@
     <section id="skills">
         <div class="container">
             <div class="skill-dsc col-4-skill left">
-            <h2>umiejętności</h2>
-                <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri. </p>
-                <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri. </p>
+                <h2>umiejętności</h2>
+                <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando
+                    cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri. </p>
+                <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando
+                    cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri. </p>
             </div>
             <div class="skill-bars col-4-skill left">
-                <h3>html/css</h3>    
+                <h3>html/css</h3>
                 <progress value="50" max="100">20%</progress>
-                <h3>html/css</h3>    
+                <h3>html/css</h3>
                 <progress value="50" max="100"></progress>
-                <h3>html/css</h3>    
+                <h3>html/css</h3>
                 <progress value="50" max="100"></progress>
-                <h3>html/css</h3>    
+                <h3>html/css</h3>
                 <progress value="50" max="100" class="responsive"></progress>
             </div>
         </div>
@@ -98,29 +102,43 @@
     <section id="portfolio">
         <div class="container">
             <h2>portfolio</h2>
-            <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri</p>
+            <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando
+                cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri</p>
         </div>
         <div class="portfolio-row">
-            <a href="">
-                <div class="proj-img img-1"></div>
-            </a>
-            <a href="">
-                <div class="proj-img img-2"></div>
-            </a>
-            <a href="">
-                <div class="proj-img img-3"></div>
-            </a>
+            <div class="proj-img img-1">
+                <div class="hov-color"></div>
+                <a href="https://github.com/MarekM09/PSDtoHTML_mobileapp" target="blank"><img src="img/github-logo.png" alt="" class="proj-icon"></a>
+                <a href=""><img src="img/search.png" alt="" class="proj-icon"></a>
+                
+            </div>
+            <div class="proj-img img-2">
+                <div class="hov-color"></div>
+                <a href="https://github.com/MarekM09/PSDtoHTML_brochure"><img src="img/github-logo.png" alt="" class="proj-icon"></a>
+                <a href=""><img src="img/search.png" alt="" class="proj-icon"></a>
+            </div>
+            <div class="proj-img img-3">
+                <div class="hov-color"></div>
+                <a href=""><img src="img/github-logo.png" alt="" class="proj-icon"></a>
+                <a href=""><img src="img/search.png" alt="" class="proj-icon"></a>
+            </div>
         </div>
         <div class="portfolio-row">
-            <a href="">
-                <div class="proj-img img-4"></div>
-            </a>
-            <a href="">
-                <div class="proj-img img-5"></div>
-            </a>
-            <a href="">
-                <div class="proj-img img-6"></div>
-            </a>
+            <div class="proj-img img-4">
+                <div class="hov-color"></div>
+                <a href=""><img src="img/github-logo.png" alt="" class="proj-icon"></a>
+                <a href=""><img src="img/search.png" alt="" class="proj-icon"></a>
+            </div>
+            <div class="proj-img img-5">
+                <div class="hov-color"></div>
+                <a href=""><img src="img/github-logo.png" alt="" class="proj-icon"></a>
+                <a href=""><img src="img/search.png" alt="" class="proj-icon"></a>
+            </div>
+            <div class="proj-img img-6">
+                <div class="hov-color"></div>
+                <a href=""><img src="img/github-logo.png" alt="" class="proj-icon"></a>
+                <a href=""><img src="img/search.png" alt="" class="proj-icon"></a>
+            </div>
         </div>
     </section>
     <section id="contact">
