Add favicon and change proj images

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Marek Miłosierny</title>
+    <link rel="shortcut icon" href="favicon.ico" />
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
