--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     </section>
     <section id="navigation">
         <div class="container">
-            <img src="img/logo.png" class="logo" alt="Marek Miłosierny logo">
-            <nav class="navbar">
-                <ul class="nav right">
+            <img src="img/logo.png" class="logo left" alt="Marek Miłosierny logo">
+            <nav class="navbar right">
+                <ul class="nav">
                     <li><a href="#hobby">o mnie</a></li>
                     <li><a href="#skills">umiejętności</a></li>
                     <li><a href="#portfolio">portfolio</a></li>
@@ -48,15 +48,15 @@
         </div>
     </section>
     <section id="hobby">
-        <div class="container">
-            <div class="col-4-hobby">
+        <div class="container floatfix">
+            <div class="col-4-hobby padding-right-20">
                 <h2>mocne strony</h2>
-                <p>Lorem ipsum dolor sit amet, ea doming until epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando
+                <p class="margin-bottom">Lorem ipsum dolor sit amet, ea doming until epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando
                     cu est.</p>
             </div>
-            <div class="col-4-hobby">
+            <div class="col-4-hobby padding-right-20">
                 <h2>Cele</h2>
-                <p>Lorem ipsum dolor sit amet, ea doming until epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando
+                <p class="margin-bottom">Lorem ipsum dolor sit amet, ea doming until epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando
                     cu est.</p>
             </div>
             <div class="col-4-hobby">
@@ -68,7 +68,7 @@
     </section>
     <section id="about">
 
-        <div class="container">
+        <div class="container floatfix">
             <img src="img/my-foto.jpg" alt="Marek Miłosierny photo" class="my-foto left">
             <div class="about-me left">
                 <h2>O mnie</h2>
@@ -80,7 +80,7 @@
         </div>
     </section>
     <section id="skills">
-        <div class="container">
+        <div class="container floatfix">
             <div class="skill-dsc col-4-skill left">
                 <h2>umiejętności</h2>
                 <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando
@@ -101,7 +101,7 @@
         </div>
     </section>
     <section id="portfolio">
-        <div class="container">
+        <div class="container floatfix">
             <h2>portfolio</h2>
             <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando
                 cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri</p>
@@ -143,7 +143,7 @@
         </div>
     </section>
     <section id="contact">
-        <div class="container">
+        <div class="container floatfix">
             <h2 class="contact-head">kontakt</h2>
             <p class="contact-para">Aby się ze mną skontaktować napisz maila na adres marek.milosierny[at]gmail.com</p>
             <a href="mailto:marek.milosierny@gmail.com" class="cta-button">napisz do mnie</a>
